--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="Dark_Purple">#FF330319</color>
+    <color name="Light_Purple">#FFe8cad7</color>
+    <color name="Light_Red">#FFB54547</color>
+    <color name="Dark_Red">#FF520202</color>
+    <color name="Ligth_Light_Red">#FFfaa6a0</color>
+    <color name="Dark_Red_Pink">#FF360308</color>
+    <color name="Light_Red_Pink">#FFfaa0a9</color>
 </resources>
